# taocky

./: .gitignore  taocky.files
cmake_test/: CMakeLists.txt
cmake_test/aligned/src/: CMakeLists.txt  aligned.c
cmake_test/argv/src/: CMakeLists.txt  argv.c
cmake_test/communication_abstruct/src/: CMakeLists.txt  client.c  communication_abstruct.c
cmake_test/coredump_create/: CMakeLists.txt
cmake_test/coredump_create/src/: CMakeLists.txt  coredump_create.c
cmake_test/cplusplus/: a.out  file_write_text.cpp  log.txt
cmake_test/dcos_debug_pressure_test/src/: CMakeLists.txt  dcos_debug_pressure_test.c
cmake_test/double_pointer/src/: CMakeLists.txt  double_pointer.c
cmake_test/dynamic/: a.out  dynamic_notification.txt  dynamic_test.c
cmake_test/fopen/src/: CMakeLists.txt  a.out  fopen.c
cmake_test/fun_ptr/src/: CMakeLists.txt  fun_ptr.c
cmake_test/getopt/src/: CMakeLists.txt  getopt.c  getopt.h  optparse.h
cmake_test/hashtable/src/: CMakeLists.txt  hashtable.c  hashtable.h
cmake_test/hexIsNull/src/: CMakeLists.txt  hexIsNull.c
cmake_test/neststruct/src/: CMakeLists.txt  neststruct.cpp
cmake_test/realloc/: CMakeLists.txt
cmake_test/realloc/src/: realloc.c  (+1 more)
cmake_test/shell/: 1_bash_cmd_record.sh  burn_in_test_dcos_debug.sh  check_mthread_unsafe_call.sh  commandtree.txt  dcos_debug_cmd.txt  dcos_test_tda4_1.sh  dcos_test_tda4_2.sh  dcos_test_tda4_all.sh  debug_cmd.txt  input_check.sh  killall_dcos_test.sh  log.txt  log.txt.autosave  log_tad4.sh  mount_sftp.sh  record.txt  run.sh  thread_unsafe_func.txt  trap_signal.sh  update_tda4.sh  upgrade.sh
(+36 files in other folders)
