cmake_minimum_required(VERSION 2.8)

project(cmake_test)

add_subdirectory(sigfpe)
add_subdirectory(strcmp)
add_subdirectory(realloc)
add_subdirectory(argv)
add_subdirectory(double_pointer)
add_subdirectory(dcos_debug_pressure_test)
add_subdirectory(performance_time)
add_subdirectory(neststruct)
add_subdirectory(rollbackfile)
add_subdirectory(structmd5)
