cmake_minimum_required(VERSION 2.8)

set(CMAKE_C_FLAGS "-Wall -O0 -g")

project(cmake_test)

add_subdirectory(sigfpe)
add_subdirectory(strcmp)
add_subdirectory(realloc)
add_subdirectory(argv)
add_subdirectory(double_pointer)
add_subdirectory(dcos_debug_pressure_test)
add_subdirectory(performance_time)
add_subdirectory(neststruct)
add_subdirectory(rollbackfile)
add_subdirectory(structmd5)
add_subdirectory(fun_ptr)
#   add_subdirectory(hashtable)
add_subdirectory(strtok)
add_subdirectory(aligned)
add_subdirectory(coredump_create)
